# pinto

./: .gitignore  AGENTS.base.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml  deny.toml  mise.toml
.agents/skills/pinto-add-pbi/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.pinto/: config.toml  dod.md  issued_ids
.pinto/archive/: P-35.md
.pinto/tasks/: P-1.md  P-10.md  P-11.md  P-12.md  P-13.md  P-14.md  P-15.md  P-16.md  P-17.md  P-18.md  P-19.md  P-2.md  P-20.md  P-21.md  P-22.md  P-24.md  P-25.md  P-26.md  P-27.md  P-28.md  P-29.md  P-3.md  P-30.md  P-31.md  P-32.md  P-33.md  P-34.md  P-35.md  P-36.md  P-37.md  P-38.md  P-39.md  P-4.md  P-40.md  P-41.md  P-42.md  P-43.md  P-44.md  P-45.md  P-46.md  (+7 more)
.pinto/templates/item/: default.md
demos/: README.md
demos/combined/full-scrum-flow/: README.md
demos/combined/release-train/: README.md
demos/single/acceptance-criteria/: README.md
demos/single/ancestor-discovery/: README.md
demos/single/archive-recovery/: README.md
demos/single/automation-plan/: README.md  plan.json
demos/single/backlog-crud/: README.md
demos/single/board-view/: README.md
demos/single/burndown/: README.md
demos/single/child-points/: README.md
demos/single/cli-test-layout/: README.md
demos/single/config-validation/: README.md
demos/single/cookbook/: README.md
demos/single/cycletime/: README.md
demos/single/dependencies/: README.md
demos/single/doctor/: README.md
demos/single/documentation/: README.md
demos/single/editor-buffer-security/: README.md
demos/single/export/: README.md
demos/single/file-id-integrity/: README.md
demos/single/git-boundary/: README.md
demos/single/git-link-sync/: README.md
demos/single/i18n/: README.md
demos/single/i18n-localizer-cache/: README.md
demos/single/import/: README.md  snapshot.json
demos/single/kanban-card-meta/: README.md
docs/: DESIGN.md  DOGFOODING.md  benchmarks.md  dependencies.md  json-schema.md  migration.md  skills.md  stability.md
examples/: large_board_bench.rs  rank_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: automation_plan_parse.rs  markdown_frontmatter_parse.rs
locales/: en-US.ftl  ja-JP.ftl
release/: package-files.txt
scripts/: check-coverage.sh  check-release-metadata.sh  large-board-benchmark.sh  verify-package.sh
skills/pinto-workflow/: SKILL.md
src/: automation.rs  backlog.rs  cli.rs  config.rs  error.rs  i18n.rs  kanban_keys.rs  lib.rs  main.rs  rank.rs  service.rs  sprint.rs  storage.rs  template.rs  timezone.rs  user_config.rs
src/backlog/: acceptance.rs  graph.rs  item.rs  item_id.rs  status.rs  workflow.rs
src/cli/: args.rs  commands.rs  dependency_display.rs  editor.rs  format.rs  json.rs  kanban.rs  location.rs  markdown.rs  shell.rs
src/service/: board.rs  burndown.rs  commits.rs  cycletime.rs  dependency.rs  doctor.rs  dod.rs  export.rs  import.rs  item.rs  lifecycle.rs  migrate.rs  next.rs  order.rs  points.rs  relations.rs  search.rs  settings.rs  sprint.rs  template.rs  test_support.rs  undo.rs  velocity.rs  wip.rs
src/storage/: atomic.rs  backend.rs  file_repository.rs  git_repository.rs  issued_ids.rs  lock.rs  markdown.rs  repository.rs  sqlite_repository.rs
tests/: benchmarks.rs  cli.rs  demos.rs  docs.rs  i18n.rs  package.rs  release_metadata.rs  skills.rs  storage_contract.rs
tests/cli/: add.rs  automation.rs  backends.rs  board.rs  common.rs  corruption.rs  dependencies.rs  doctor.rs  dod.rs  export.rs  git_backend.rs  import.rs  init_discovery.rs  item.rs  kanban.rs  large_board_benchmark.rs  list_show.rs  misc.rs  move_reorder.rs  next.rs  rebalance.rs  sprint.rs  usage.rs
(+424 files in other folders)
