[package]
name = "pinto-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pinto = { path = ".." }

[[bin]]
name = "automation_plan_parse"
path = "fuzz_targets/automation_plan_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "markdown_frontmatter_parse"
path = "fuzz_targets/markdown_frontmatter_parse.rs"
test = false
doc = false
bench = false
